<resources>
    <string name="app_name">Marvel Heroes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to the Marvel HQ\'s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="register">Register</string>
    <string name="holds_comic_cover">Holds comic cover</string>
    <string name="comic_image">Comic image</string>
    <string name="comic_cover">Comic cover</string>
    <string name="published">Published:&#160;</string>
    <string name="price">Price:&#160;</string>
    <string name="pages">Pages:&#160;</string>
    <string name="price_format">$ %1$.2f</string>
    <string name="issue_number">#%1$s</string>
    <string name="close_button">Close button</string>
    <string name="not_available">Not available</string>
</resources>